Small fixed for icon readme and example country
- Updated german readme
- Updated docs icon
- Updated example countries (removed non ASCII characters)
- Updated Install script for contributors

--- a/assets/example/example_countries.cfg
+++ b/assets/example/example_countries.cfg
@@ -1,5 +1,5 @@
 AF: Afghanistan
-AX: Åland Islands
+AX: Aland Islands
 AL: Albania
 DZ: Algeria
 AS: American Samoa
@@ -52,7 +52,7 @@ CD: Congo (Democratic Republic)
 CG: Congo (Republic)
 CK: Cook Islands
 CR: Costa Rica
-CI: Côte d'Ivoire
+CI: Cote d'Ivoire
 HR: Croatia
 CU: Cuba
 CW: Curaçao
@@ -183,7 +183,7 @@ RE: Réunion
 RO: Romania
 RU: Russia
 RW: Rwanda
-BL: Saint Barthélemy
+BL: Saint Barthelemy
 SH: Saint Helena
 KN: Saint Kitts & Nevis
 LC: Saint Lucia
